[gd_scene load_steps=7 format=2]

[ext_resource path="res://Background/BlackBackground.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 400, 300 )
scale = Vector2( 800, 600 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -37.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Missile Command"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickToStart" type="Label" parent="."]
margin_left = 318.198
margin_top = 379.812
margin_right = 480.198
margin_bottom = 404.812
custom_fonts/font = SubResource( 2 )
text = "Click to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkTimer" type="Timer" parent="."]
autostart = true

[node name="HighScore" type="Label" parent="."]
anchor_right = 1.0
margin_top = 29.8068
margin_bottom = 62.8068
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
